--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://siddharthkhatsuriya.github.io/index">
+        <meta http-equiv="refresh" content="0; url=https://siddharthkhatsuriya.github.io/resume">
         <script type="text/javascript">
-            window.location.href = "https://siddharthkhatsuriya.github.io/index"
+            window.location.href = "https://siddharthkhatsuriya.github.io/resume"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://siddharthkhatsuriya.github.io/index'>link to Resume</a>.
+        If you are not redirected automatically, follow this <a href='https://siddharthkhatsuriya.github.io/resume'>link to Resume</a>.
     </body>
 </html>
