--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-    <head>
-        
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://siddharthkhatsuriya.github.io/resume'>link to Resume</a>.
-    </body>
+
+<!DOCTYPE>
+<html>
+<head>
+<title>Under Construction</title>
+</head>
+<body>
+<center>
+<img src="media/images/under-construction.jpg" height="600px">
+
+<p>This page is under construction. Please come back soon!</p>
+
+ follow this <a href='https://siddharthkhatsuriya.github.io/resume'>link to Resume</a>.
+</body>
 </html>
