--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <center>
-<img src="media/images/under-construction.jpg" height="600px">
+<img src="https://github.com/SiddharthKhatsuriya/SiddharthKhatsuriya.github.io/blob/master/Media/images/under-construction.jpg" height="600px">
 
 <p>This page is under construction. Please come back soon!</p>
 
